@@ -601,7 +601,7 @@ GF_Err hdlr_dump(GF_Box *a, FILE * trace)
 	GF_HandlerBox *p = (GF_HandlerBox *)a;
 	fprintf(trace, "<HandlerBox Type=\"%s\" Name=\"", gf_4cc_to_str(p->handlerType));
 	/*just print alphanum symbols, many files to have non-printable XML characters here*/
-	for (i=0; i<p->nameLength; i++) fprintf(trace, "%c", isalnum(p->nameUTF8[i]) ? p->nameUTF8[i]  :'?');
+	for (i=0; i<p->nameLength; i++) fprintf(trace, "%c", (p->nameUTF8[i]&0x80) ? '?' : p->nameUTF8[i]);
 	fprintf(trace, "\">\n");
 	DumpBox(a, trace);
 	gb_full_box_dump(a, trace);
